--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,4 +19,13 @@
   box-shadow: 0 0 10px #29d, 0 0 5px #29d;
 }
 
+.hide-scrollbar {
+  scrollbar-width: none;        /* Firefox */
+  -ms-overflow-style: none;     /* IE e Edge antigo */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;                /* Chrome, Safari, Opera */
+}
+
 
